// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post should match export snapshot 1`] = `
Object {
  "Post": [Function],
  "Score": [Function],
  "StyledCardArticle": Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": ComponentStyle {
      "componentId": "sc-bZQynM",
      "isStatic": true,
      "rules": Array [
        "
  margin: 0;
  padding: 1rem;

  background-color: #fff;

  width: 100%;
  position: relative;
  min-width: 0;
  word-wrap: break-word;
  word-break: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
    0 1px 5px 0 rgba(0, 0, 0, 0.12);

  display: flex;
  flex-wrap: wrap;
",
      ],
    },
    "displayName": "styled.article",
    "foldedComponentIds": Array [],
    "render": [Function],
    "styledComponentId": "sc-bZQynM",
    "target": "article",
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
  "default": [Function],
}
`;

exports[`Post should render a Score 1`] = `
.c2 {
  color: #1b1b1b;
}

.c1 {
  max-width: 14px;
  max-height: 16px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: not-allowed;
}

.c1:active {
  pointer-events: none;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 1rem;
}

<div>
  <div
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-up fa-w-14 c1"
      data-icon="arrow-up"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
        fill="currentColor"
      />
    </svg>
    <span
      class="c2"
    >
      10
    </span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-arrow-down fa-w-14 c1"
      data-icon="arrow-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Post should render without errors 1`] = `
.c3 {
  color: #1b1b1b;
}

.c2 {
  max-width: 14px;
  max-height: 16px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: not-allowed;
}

.c2:active {
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 1rem;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  margin: 0;
  padding: 1rem;
  background-color: #fff;
  width: 100%;
  position: relative;
  min-width: 0;
  word-wrap: break-word;
  word-break: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  border-radius: 0.125rem;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c7 {
  color: rgb(120,124,126);
}

.c5 {
  color: #1b1b1b;
  -webkit-flex-basis: 60%;
  -ms-flex-preferred-size: 60%;
  flex-basis: 60%;
  width: 60%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-left: 1rem;
}

.c8 {
  color: rgb(120,124,126);
  margin-left: 0.25rem;
}

.c8:focus {
  outline: thin dotted;
}

.c8:hover {
  color: #aaa;
}

.c8:link {
  -webkit-tap-highlight-color: rgba(102,102,102,0.5);
}

.c13 {
  color: rgb(120,124,126);
  margin-left: 0.25rem;
}

.c9 {
  margin-left: 0.25rem;
  color: rgb(120,124,126);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 150px;
  background: grey;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c12 {
  max-width: 14px;
  max-height: 16px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.25rem;
}

<div>
  <article
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-up fa-w-14 c2"
        data-icon="arrow-up"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
          fill="currentColor"
        />
      </svg>
      <span
        class="c3"
      >
        10
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-down fa-w-14 c2"
        data-icon="arrow-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <img
      class="c4"
    />
    <h2
      class="c5"
    />
    <p
      class="c6"
    >
      <span
        class="c7"
      >
        Posted by
      </span>
      <a
        class="c8"
        href="https://www.reddit.com/user/aretecode"
      >
        aretecode
      </a>
      <time
        class="c9 c10"
      >
         ago
      </time>
    </p>
    <div
      class="c11"
    >
      <svg
        aria-labelledby="svg-inline--fa-title-WxAgDwxbUBQP"
        class="svg-inline--fa fa-expand fa-w-14 c12"
        data-icon="expand"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-WxAgDwxbUBQP"
        >
          expand icon for description... or link to image
        </title>
        <path
          d="M0 180V56c0-13.3 10.7-24 24-24h124c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H64v84c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12zM288 44v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12V56c0-13.3-10.7-24-24-24H300c-6.6 0-12 5.4-12 12zm148 276h-40c-6.6 0-12 5.4-12 12v84h-84c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24V332c0-6.6-5.4-12-12-12zM160 468v-40c0-6.6-5.4-12-12-12H64v-84c0-6.6-5.4-12-12-12H12c-6.6 0-12 5.4-12 12v124c0 13.3 10.7 24 24 24h124c6.6 0 12-5.4 12-12z"
          fill="currentColor"
        />
      </svg>
      <button
        class="c13"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-comment fa-w-16 c12"
          data-icon="comment"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32z"
            fill="currentColor"
          />
        </svg>
         comments
      </button>
    </div>
  </article>
</div>
`;
